--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@nervosnetwork/ckb-sdk-core": "^0.15.0",
+    "async": "^3.1.0",
     "blake2b-wasm": "^1.1.7"
   }
 }
